small fix for spacing of alert

--- a/blog_on_rails/app/assets/stylesheets/main.scss
+++ b/blog_on_rails/app/assets/stylesheets/main.scss
@@ -73,6 +73,7 @@ ul.comment-list {
 }
 
 .alert-box {
+  margin-top: 1em;
   display: flex;
   flex-direction: row;
   justify-content: center;
